adding club collection
